# LiteLLM-WM

./: .gitignore  DEVELOPER_MANUAL.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/scripts/: create_owner.py
backend/src/: main.py
backend/src/modules/admin/: repository.py  router.py  schemas.py  service.py
backend/src/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/conversations/: connection_manager.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/llm/: __init__.py  model_registry.py  ports.py
backend/src/modules/llm/adapters/: __init__.py  litellm_adapter.py
backend/src/modules/usage/: __init__.py  activities.py  models.py  repository.py  router.py  schemas.py  service.py  workflows.py
backend/src/modules/workspaces/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/shared/config/: settings.py
backend/src/shared/db/: __init__.py  engine.py
backend/src/shared/db/migrations/: env.py
backend/src/shared/db/migrations/versions/: 21fd62d15022_align_models_with_plan.py  eac5b1c38fb8_init.py
backend/src/shared/middleware/: __init__.py  auth.py  error_handler.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_conversations.py  test_usage.py  test_workspaces.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: chatStore.ts
(+12 files in other folders)
